--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -51,11 +51,11 @@
                     </div>
                     <div class="form-group">
                         <label for="endereco">Endereço:</label>
-                        <input type="text" id="endereco" class="form-control" ng-model="editingUser.endereco" required>
+                        <input type="text" id="endereco" class="form-control" ng-model="editingUser.endereco">
                     </div>
                     <div class="form-group">
                         <label for="telefone">Telefone:</label>
-                        <input type="text" id="telefone" class="form-control" ng-model="editingUser.telefone" required>
+                        <input type="text" id="telefone" class="form-control" ng-model="editingUser.telefone">
                     </div>
                     <button type="submit" class="btn btn-primary">Salvar</button>
                 </form>
@@ -76,21 +76,22 @@
                 <form ng-submit="addUser()">
                     <div class="form-group">
                         <label for="nome">Nome:</label>
-                        <input type="text" id="nome" class="form-control" ng-model="newUser.nome" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="endereco">Endereço:</label>
-                        <input type="text" id="endereco" class="form-control" ng-model="newUser.endereco" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="telefone">Telefone:</label>
-                        <input type="text" id="telefone" class="form-control" ng-model="newUser.telefone" required>
+                        <input type="text" id="nome" class="form-control" ng-model="newUser.nome" required placeholder="Digite seu nome">
                     </div>
                     <div class="form-group">
                         <label for="cpf">CPF:</label>
-                        <input type="text" id="cpf" class="form-control" ng-model="newUser.cpf" required>
+                        <input type="text" id="cpf" class="form-control" ng-model="newUser.cpf" required placeholder="Digite seu CPF (somente números)">
                     </div>
-                    <button type="submit" class="btn btn-primary">Add</button>
+                    <div class="form-group">
+                        <label for="endereco">Endereço:</label>
+                        <input type="text" id="endereco" class="form-control" ng-model="newUser.endereco" placeholder="Digite seu endereço">
+                    </div>
+                    <div class="form-group">
+                        <label for="telefone">Telefone:</label>
+                        <input type="text" id="telefone" class="form-control" ng-model="newUser.telefone" placeholder="Digite seu telefone">
+                    </div>
+                    
+                    <button type="submit" class="btn btn-primary">Salvar</button>
                 </form>
             </div>
         </div>
