--- a/app/views/user-list.html
+++ b/app/views/user-list.html
@@ -75,11 +75,11 @@
             <div class="modal-body">
                 <form ng-submit="addUser()">
                     <div class="form-group">
-                        <label for="nome">Nome:</label>
+                        <label for="nome">Nome*:</label>
                         <input type="text" id="nome" class="form-control" ng-model="newUser.nome" required placeholder="Digite seu nome">
                     </div>
                     <div class="form-group">
-                        <label for="cpf">CPF:</label>
+                        <label for="cpf">CPF*:</label>
                         <input type="text" id="cpf" class="form-control" ng-model="newUser.cpf" required placeholder="Digite seu CPF (somente números)">
                     </div>
                     <div class="form-group">
